debian: create Debian package

--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,14 @@
-.vscode
-facemon
-file-server
-prefix-allocate
-prefix-request
-register-prefix-cmd
-register-prefix-remote
-serve-certs
-unix-time-service
+/.vscode
+/debian/*debhelper*
+/debian/changelog
+/debian/files
+/debian/ndn6-tools
+/debian/ndn6-tools.substvars
+/facemon
+/file-server
+/prefix-allocate
+/prefix-request
+/register-prefix-cmd
+/register-prefix-remote
+/serve-certs
+/unix-time-service
