file-server: size and lastSeg in RDR metadata

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,16 +1,5 @@
 version: 2.1
 
-commands:
-  do-build:
-    steps:
-      - run: sudo apt-get install --no-install-recommends clang-format-8 libndn-cxx-dev
-      - checkout
-      - run: |
-          make lint
-          [[ $(git status --porcelain | tee /dev/stderr | wc -l) -eq 0 ]]
-      - run: make
-      - run: sudo make install
-
 jobs:
   build-ppa:
     docker:
@@ -21,7 +10,10 @@ jobs:
     resource_class: small
     steps:
       - run: sudo add-apt-repository ppa:named-data/ppa
-      - do-build
+      - run: sudo apt-get install --no-install-recommends libndn-cxx-dev
+      - checkout
+      - run: make
+      - run: sudo make install
   build-nightly:
     docker:
       - image: cimg/base:stable-20.04
@@ -34,7 +26,13 @@ jobs:
           echo "deb [trusted=yes] https://nfd-nightly-apt.ndn.today/ubuntu focal main" \
             | sudo tee /etc/apt/sources.list.d/nfd-nightly.list
           sudo apt-get update
-      - do-build
+      - run: sudo apt-get install --no-install-recommends clang-format-11 libndn-cxx-dev
+      - checkout
+      - run: |
+          make lint
+          [[ $(git status --porcelain | tee /dev/stderr | wc -l) -eq 0 ]]
+      - run: make
+      - run: sudo make install
 
 workflows:
   build:
