--- a/debian/control
+++ b/debian/control
@@ -3,6 +3,16 @@ Section: utils
 Priority: optional
 Maintainer: Junxiao Shi <deb@mail1.yoursunny.com>
 Build-Depends: debhelper (>= 10),
+               libboost-atomic-dev,
+               libboost-chrono-dev,
+               libboost-date-time-dev,
+               libboost-filesystem-dev,
+               libboost-iostreams-dev,
+               libboost-log-dev,
+               libboost-program-options-dev,
+               libboost-regex-dev,
+               libboost-stacktrace-dev,
+               libboost-system-dev,
                libndn-cxx-dev,
                pkg-config (>= 0.29)
 Standards-Version: 4.5.1
