--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,22 +13,22 @@ commands:
 jobs:
   build-ppa:
     docker:
-      - image: cimg/base:current-20.04
+      - image: cimg/base:current-22.04
     resource_class: small
     steps:
       - checkout
-      - run: sudo add-apt-repository ppa:named-data/ppa
+      - run: sudo add-apt-repository -y ppa:named-data/ppa
       - install_deps
       - run: make
       - run: sudo make install
   build-nightly:
     docker:
-      - image: cimg/base:current-20.04
+      - image: cimg/base:current-22.04
     resource_class: small
     steps:
       - checkout
       - run: |
-          echo "deb [trusted=yes] https://nfd-nightly-apt.ndn.today/ubuntu focal main" \
+          echo "deb [trusted=yes] https://nfd-nightly-apt.ndn.today/ubuntu jammy main" \
             | sudo tee /etc/apt/sources.list.d/nfd-nightly.list
           sudo apt-get update
       - install_deps
